--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,8 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: white;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 20;
 }
